# oql

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  Taskfile.testql.yml  Taskfile.yml  app.doql.css  app.doql.less  goal.yaml  pyproject.toml  pyqual.yaml  sumd.json
.pyqual/: pipeline.db
oql/: __init__.py  _archive_shell.py  cli.py  shell.py
oql/adapters/: local.py  remote.py
oql/core/: event_store.py
oql/shell/: __init__.py  api_commands.py  commands.py  executor.py  process_commands.py  protocol_commands.py  runner.py  session_commands.py  ui_commands.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
testql-scenarios/: cross-project-integration.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_cli.py
