[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oql"
version = "0.1.0"
description = "OQL CLI — command line interface for OqlOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "oqlos>=0.1.0",
]

[project.scripts]
oqlctl = "oql.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["oql*"]
